--- a/qm_mb_energy_calculator/src/settings.ini
+++ b/qm_mb_energy_calculator/src/settings.ini
@@ -1,5 +1,4 @@
 [DEFAULT]
-input = 2mol_trimer.xyz
 fragments = 1,1,1
 charges = 0,0,0
 spins = 1,1,1
@@ -12,7 +11,6 @@ memory = 500MB
 threads = 6
 
 [driver]
-input = isomer1_linear_Q.xyz
 model = psi4
 
 [molecule]
@@ -29,4 +27,13 @@ cp = False
 [psi4]
 memory = 500MB
 threads = 6
+
+[MBdecomp]
+mbdecomp = True
+cluster_analysis = True
+overwrite = False
+append = True
+max_nbody_energy = 3
+kbody_energy = True
+
 
